Add submodule config-repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "limits-service"]
 	path = limits-service
 	url = https://github.com/krishan5/limits-service.git
+[submodule "config-repo"]
+	path = config-repo
+	url = https://github.com/krishan5/config-repo.git
