--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "config-repo"]
 	path = config-repo
 	url = https://github.com/krishan5/config-repo.git
+[submodule "spring-cloud-config-server"]
+	path = spring-cloud-config-server
+	url = https://github.com/krishan5/spring-cloud-config-server.git
