Added zipkin server in docker-compose file and set environment variable its baseurl with resolved localhost by replacing with its name and added it in currency-exchange-service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,21 @@ services:
       - naming-server
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
     
     naming-server:
     image: krishan5/naming-server:latest
     mem_limit: 700m
     ports:
       - "8761:8761"
+    networks:
+      - currency-network
+    
+    zipkin:
+    image: openzipkin/zipkin:latest
+    mem_limit: 700m
+    ports:
+      - "9411:9411"
     networks:
       - currency-network
 
